dev_k8s_manifest_microservices/frontend_k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
      annotations:
        #sidecar.istio.io/rewriteAppHTTPProbers: "true"    # For Istio compatibility
    spec:
      serviceAccountName: frontend
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: server
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
          image: alade01/frontend_image:latest
          ports:
          - containerPort: 8080
          readinessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/_healthz"
              port: 8080
              httpHeaders:
              - name: "Cookie"
                value: "shop_session-id=x-readiness-probe"
          livenessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/_healthz"
              port: 8080
              httpHeaders:
              - name: "Cookie"
                value: "shop_session-id=x-liveness-probe"
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: frontend-external
#   labels:
#     app: frontend
# spec:
#   type: LoadBalancer
#   selector:
#     app: frontend
#   ports:
#   - name: http
#     port: 80
#     targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-external
  labels:
    app: frontend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-path: /
    external-dns.alpha.kubernetes.io/hostname: dev.oluwaseunalade.com # Replace with your domain
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: frontend-external
#   labels:
#     app: frontend
#   annotations:
#     service.beta.kubernetes.io/aws-load-balancer-healthcheck-path: /
#     external-dns.alpha.kubernetes.io/hostname: dev.oluwaseunalade.com
#     service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:ca-central-1:050752609092:certificate/ef108c4b-26ea-4449-9ef9-a8e863ed5bd2 # Replace with your ACM certificate ARN
#     service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
# spec:
#   type: LoadBalancer
#   selector:
#     app: frontend
#   ports:
#     - name: https
#       protocol: TCP
#       port: 443
#       targetPort: 8080
#     - name: http
#       protocol: TCP
#       port: 80
#       targetPort: 8080
# ---
# apiVersion: v1
# kind: ServiceAccount
# metadata:
#   name: frontend
