dev_k8s_manifest_microservices/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dev.oluwaseunalade.com                    #replace with your domain
    secretName: dev-oluwaseunalade-com-tls      #replace with your secret name   
  rules:
  - host: dev.oluwaseunalade.com                #replace with your domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
